Fix: Message overlaps the menu items

--- a/src/lacr-demo/app/assets/stylesheets/application.css
+++ b/src/lacr-demo/app/assets/stylesheets/application.css
@@ -197,3 +197,7 @@ mark{
   /*Fix overflow on small screen*/
   margin-right: 0;
 }
+
+#noty_topRight_layout_container{
+  margin-top: 50px !important;
+}
